--- a/merlin.html
+++ b/merlin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MERLIN FASHION CLUB</title>
+    <title>Ominira</title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
     <link rel="stylesheet" href="css/style_index.css">
@@ -17,7 +17,7 @@
   <!-- navbar -->
     <nav>
       <div class="logo">
-        <h3><a href="merlin.html" class="logo-name">Merlin Fashion</a></h3>
+        <h3><a href="merlin.html" class="logo-name">Ominira</a></h3>
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
@@ -55,14 +55,14 @@
   <!-- FOOTER -->
     <div class="footer-container">
       <div class="footer-1">
-        <a href="index.html"><h2>MERLIN FASHION🦋</h2></a>
+        <a href="index.html"><h2>Ominira</h2></a>
         <br>
-        <p><b>ONLINE SHOPPING</b></p>
+        <p><b>Ominira</b></p>
           <h6>
-            Men<br><br>
-            Women <br><br>
-            Kids <br><br>
-            Merline Exclusive<br><br>
+            Gallery <br><br>
+            Newsletter <br><br>
+            About Ominira <br><br>
+            Coming Soon <br><br>
           </h6>
       </div>
 
@@ -80,7 +80,7 @@
       <div class="footer-3">
         <p><b>100% Original</b> guarantee</p>
           <h6>
-            for all products at merlinfashion.com
+            for all products at https://mofefreedom.github.io/OminiraClothing/
           </h6>
         <p><b>Return within 30days</b> of</p>
           <h6>
@@ -88,13 +88,13 @@
           </h6>
         <p><b>Get free delivery</b> for every</p>
           <h6>
-            order above Rs.999
+            order above $60.00
           </h6>
         <br><br>
       </div>
     
     </div>
-    <p class="copy-right"><a href="index.html">Shivani</a>&copy;2019</p>
+    <p class="copy-right"><a href="index.html">Ominira Clothing Corporation</a>&copy;2019</p>
     <br>
   <!-- FOOTER -->
     
