--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
     <!-- navbar -->
       <nav> 
         <div class="logo">
-          <h3><a href="merlin.html" class="logo-name">Merlin Fashion</a></h3>
+          <h3><a href="merlin.html" class="logo-name">Ominira</a></h3>
         </div>
 
         <ul class="nav-links">
@@ -32,9 +32,6 @@
         </div>
       </nav>
     <!-- navbar -->
-      <h2 class="main-head-of-products">Everyone Has A Style Statment<br>
-        <span class="colored-word-bigger-size">FIND YOURS HERE!</span>
-      </h2>
 
       <br>
       <div class="bg-images">
@@ -47,7 +44,7 @@
       </p></center>
 
       <div>
-        <h1>For <span class="colored-word">Her</span></h1>
+        <h1> Clothing </h1>
         <center><hr class="products-hr"></center>
         <br><br>
 
@@ -62,51 +59,18 @@
           <img src="images/products-img/women/western1.png"  id="Ives Solid Shirt Style Top || Rs.549" alt="" onclick="add(this.id)">
           <img src="images/products-img/women/western2.png"  id="Style Quotient Solid Top || Rs.554" alt="" onclick="add(this.id)">
           <img src="images/products-img/women/western3.png"  id="HERE&NOW Printed A-Line Top || Rs.549" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/western4.png"  id="SASSAFRAS Ruffled Shirt Style Top || Rs. 549" alt="" onclick="add(this.id)">
-        </div>
-        <div class="g-shoes">
-          <img src="images/products-img/women/g-shoe1.png"  id=" PUMA Women LQDCell || Rs.6999" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/g-shoe2.png"  id="ADIDAS Women Ultraboost19 Running || Rs.11899" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/g-shoe3.png"  id="HRX Womwn Abslute Run  || Rs.1549" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/g-shoe4.png"  id="Skercher Women GO RUN  || Rs.3249" alt="" onclick="add(this.id)">
-        </div>
-        <div class="heels">
-          <img src="images/products-img/women/heels1.png"  id="Shetopia Women Heels || Rs.499" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/heels2.png"  id="ZAPATOZ Women Heeled Boots || Rs.527" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/heels3.png"  id="Allen Solly Women Solid Wedged || Rs.2499" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/heels4.png"  id="Shoetopia Women Heels || Rs.499" alt="" onclick="add(this.id)">
         </div>
 
-        <h1>For <span class="colored-word">Him</span></h1>
+        <h1> Accesories </h1>
         <center><hr class="products-hr"></center>
         <br><br>
 
         <div class="shirts">
           <img src="images/products-img/men/shirt1.png"  id="Difference of Opinion Printed Shirt || Rs.449" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/shirt2.png"  id="Moda Rapido Printed Round Neck T-shirt || Rs.486" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/shirt3.png"  id="DILLINGER Colourblocked Round Neck T-shirt || Rs.404" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/shirt4.png"  id="Roadster T-shirt with Shoulder patch || Rs.519" alt="" onclick="add(this.id)">
-        </div>
-        <div class="jeans">
-          <img src="images/products-img/men/jeans1.png"  id="HIGHLANDER Men Slim Fit Jeans || Rs.874" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/jeans2.png"  id="Roadster Men Super Skinny Fit Jeans || Rs.1199" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/jeans3.png"  id="Calvin Klein Jeans Mean Slim Straight Jeans || Rs.9599" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/jeans4.png"  id="LOCOMOTIVE Mean Slim Fit Jeans || Rs.999" alt="" onclick="add(this.id)">
-        </div>
-        <div class="joggers">
-          <img src="images/products-img/men/joggers1.png"  id="HRX Men Solid Joggers || Rs.934" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/joggers1.png"  id="HRX Men Solid Joggers || Rs.934" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/joggers1.png"  id="HRX Men Solid Joggers || Rs.934" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/joggers1.png"  id="HRX Men Solid Joggers || Rs.934" alt="" onclick="add(this.id)">
-        </div>
-        <div class="shoes">
-          <img src="images/products-img/men/shoe1.png"  id="PUMA Men Clasp IDP Sneakers || Rs.1304" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/shoe2.png"  id="Levis Men Sneakers || Rs.1169" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/shoe3.png"  id="Mactree Men Sneakers || Rs.679" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/shoe4.png"  id="HRX Men Pro Sneakers || Rs.1699" alt="" onclick="add(this.id)">
+          <img src="images/products-img/men/shirt1.png"  id="Difference of Opinion Printed Shirt || Rs.449" alt="" onclick="add(this.id)">
         </div><br>
 
-        <h4 class="sry-msg">Uh-Oh! We are<span class="colored-word"> done</span>🛒</h4>
+        <h4 class="sry-msg">Ready to<span class="colored-word"> Checkout</span>🛒</h4>
         <center><hr class="last-hr-of-product"></center>
         <br><br>
 
@@ -118,8 +82,8 @@
             
           </ul>
         <button class="btn-clear-list" onclick="emptyList()"> <span class="colored-word"> Clear My List</span></button> <br>
-          <small>Can't see anything? Click & add your favorite fashion in
-          <span class="colored-word"> Shopping List!</span> </small>
+          <small>Add
+          <span class="colored-word"> more</span> </small>
         </div>
         <br><br><br>
       </div>
