--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
         <br><br>
 
         <div class="kurti">
-          <img src="images/products-img/women/kurti1.png" id="AKS  Kurta with Plazzzo & Dupatta || Rs.1799" onclick="add(this.id)">
+          <img src="images/products-img/women/ominirahoodie.jpg" id="Ominira Hoodie || $5.99 USD" onclick="add(this.id)">
           
           <img src="images/products-img/women/kurti2.png" id="Nayo Women Solid Kurta with Trouser || Rs.1649"" alt="" onclick="add(this.id)">
           <img src="images/products-img/women/kurti3.png" id="AKS Printed Staight Kurta || Rs.659" alt="" onclick="add(this.id)">
