--- a/products.html
+++ b/products.html
@@ -50,6 +50,7 @@
 
         <div class="kurti">
           <img src="images/products-img/women/ominirahoodie.jpg" id="Ominira Hoodie || $59.99 USD" alt="" onclick="add(this.id)">
+          <h1>$59.99 USD</h1>
           <img src="images/products-img/women/kurti2.png" id="Nayo Women Solid Kurta with Trouser || Rs.1649"" alt="" onclick="add(this.id)">
           <img src="images/products-img/women/kurti3.png" id="AKS Printed Staight Kurta || Rs.659" alt="" onclick="add(this.id)">
           <img src="images/products-img/women/kurti4.png" id="Fabindia Slim Fit Straight Kurta || Rs.1990" alt="" onclick="add(this.id)">
