--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
         <br><br>
 
         <div class="kurti">
-          <img src="images/products-img/women/ominirahoodie.jpg" alt="$59.99 USD" id="Ominira Hoodie || $59.99 USD" alt="" onclick="add(this.id)">
+          <img src="images/products-img/women/ominirahoodie.jpg" alt="$59.99 USD" id="Ominira Hoodie || $59.99 USD" onclick="add(this.id)">
           <img src="images/products-img/women/kurti2.png" id="Nayo Women Solid Kurta with Trouser || Rs.1649" alt="" onclick="add(this.id)">
           <img src="images/products-img/women/kurti3.png" id="AKS Printed Staight Kurta || Rs.659" alt="" onclick="add(this.id)">
           <img src="images/products-img/women/kurti4.png" id="Fabindia Slim Fit Straight Kurta || Rs.1990" alt="" onclick="add(this.id)">
