--- a/products.html
+++ b/products.html
@@ -49,15 +49,15 @@
         <br><br>
 
         <div class="kurti">
-          <img src="images/products-img/women/ominirahoodie.jpg" alt="$59.99 USD" id="Ominira Hoodie || $59.99 USD" onclick="add(this.id)">
-          <img src="images/products-img/women/kurti2.png" id="Nayo Women Solid Kurta with Trouser || Rs.1649" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/kurti3.png" id="AKS Printed Staight Kurta || Rs.659" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/kurti4.png" id="Fabindia Slim Fit Straight Kurta || Rs.1990" alt="" onclick="add(this.id)">
+          <img src="images/products-img/women/ominirahoodie.jpg" id="Ominira Hoodie || $59.99 USD" alt="$59.99 USD" onclick="add(this.id)">
+          <img src="images/products-img/women/ominirasweats.jpg" id="Ominira Sweats || $59.99 USD" alt="$59.99 USD" onclick="add(this.id)">
+          <img src="images/products-img/women/ominirajeans.jpg" id="Ominira Blue Jeans || $49.99 USD" alt="$49.99 USD" onclick="add(this.id)">
+          <img src="images/products-img/women/ominirablkjeans.jpg" id="Ominira Black Jeans || $49.99 USD" alt="$49.99 USD" onclick="add(this.id)">
         </div> 
         <div class="western">
-          <img src="images/products-img/women/western1.png"  id="Ives Solid Shirt Style Top || Rs.549" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/western2.png"  id="Style Quotient Solid Top || Rs.554" alt="" onclick="add(this.id)">
-          <img src="images/products-img/women/western3.png"  id="HERE&NOW Printed A-Line Top || Rs.549" alt="" onclick="add(this.id)">
+          <img src="images/products-img/women/ominiragreytee.jpg"  id="Ominira Grey Tee || $29.99 USD" alt="$29.99 USD" onclick="add(this.id)">
+          <img src="images/products-img/women/ominiracreamtee.jpg"  id="Ominira Cream Tee || $29.99 USD" alt="$29.99 USD" onclick="add(this.id)">
+          <img src="images/products-img/women/ominirajorts.jpg"  id="Ominira Jean Shorts || $39.99 USD" alt="$39.99 USD" onclick="add(this.id)">
         </div>
 
         <h1> Accesories </h1>
@@ -65,8 +65,9 @@
         <br><br>
 
         <div class="shirts">
-          <img src="images/products-img/men/shirt1.png"  id="Difference of Opinion Printed Shirt || Rs.449" alt="" onclick="add(this.id)">
-          <img src="images/products-img/men/shirt1.png"  id="Difference of Opinion Printed Shirt || Rs.449" alt="" onclick="add(this.id)">
+          <img src="images/products-img/men/ominirabelt.jpg"  id="Ominira Belt || $24.99" alt="$24.99" onclick="add(this.id)">
+          <img src="images/products-img/men/ominiratote.jpg"  id="Ominira Tote Bag || $19.99" alt="$19.99" onclick="add(this.id)">
+          <img src="images/products-img/ominirashades.jpg"  id="Ominira Shades || $24.99" alt="$24.99" onclick="add(this.id)">
         </div><br>
 
         <h4 class="sry-msg">Ready to<span class="colored-word"> Checkout</span>🛒</h4>
