--- a/login.html
+++ b/login.html
@@ -41,15 +41,29 @@
       <img src="images/login-images/FFDB80D8-D743-4E01-B39F-F8D5E356E59A.png" class="login-image" alt="">
     </div>
     
-    <center>LOGIN HERE🪢</center> 
+    <center>Login with Password</center> 
     <br><br>
-  
+
     <div class="login-form">
-      <input type="text" placeholder="Username Or Email" id="username">
       <br><br> 
       <input type="password" placeholder="Password" id="password"><br><br>
       <a href="index.html"><button class="login-button">LOG IN</button></a>&nbsp;&nbsp;
       <a href="index.html"> <button class="back-button">BACK </button></a> 
+      
+      <meta charset="utf-8">
+    <title>Ominira</title>
+    <link rel="icon" type="image/x-icon" href="/images/fimageedit_5_2736237815.png">
+    <h4>Don't Have the Password?</h4>
+  </head>
+  <body>
+
+    <form action="https://formsubmit.co/ominiraclo@gmail.com" method="POST">
+      <input type="email" name="email" placeholder="Email Address" required>
+      <input type="text" name="name" placeholder="First Name" required>
+      <input type="text" name="name" placeholder="Last name" required>
+      <button type="submit">Send password</button>
+
+    </form>
     </div>
 
     <hr>
